@@ -1,5 +1,5 @@
 ## Process this file with automake to produce Makefile.in
-# $Id: Makefile.am,v 1.11 2002-05-11 19:06:17 themnemonic Exp $
+# $Id: Makefile.am,v 1.12 2002-06-27 00:18:47 themnemonic Exp $
 
 localedir = $(datadir)/locale
 DEFS = -DLOCALEDIR=\"\$(localedir)\" @DEFS@
@@ -15,7 +15,8 @@ netcat_SOURCES = \
 	misc.c \
 	netcat.c \
 	network.c \
-	telnet.c
+	telnet.c \
+	udphelper.c
 
 if NEED_GETOPT
 netcat_LDADD = \
